Cleaning juoyter notebook

--- a/CleanData.ipynb
+++ b/CleanData.ipynb
@@ -11,8 +11,8 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pandas in /home/filipasenra/.local/lib/python3.6/site-packages (1.0.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/lib/python3/dist-packages (from pandas) (2.6.1)\n",
       "Requirement already satisfied: pytz>=2017.2 in /usr/lib/python3/dist-packages (from pandas) (2018.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/lib/python3/dist-packages (from pandas) (2.6.1)\n",
       "Requirement already satisfied: numpy>=1.13.3 in /home/filipasenra/.local/lib/python3.6/site-packages (from pandas) (1.18.4)\n"
      ]
     }
@@ -236,23 +236,23 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: matplotlib in /home/filipasenra/.local/lib/python3.6/site-packages (3.2.1)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (2.4.7)\n",
       "Requirement already satisfied: python-dateutil>=2.1 in /usr/lib/python3/dist-packages (from matplotlib) (2.6.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (1.2.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (0.10.0)\n",
       "Requirement already satisfied: numpy>=1.11 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (1.18.4)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (0.10.0)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (2.4.7)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (1.2.0)\n",
       "Requirement already satisfied: six in /usr/lib/python3/dist-packages (from cycler>=0.10->matplotlib) (1.11.0)\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: seaborn in /home/filipasenra/.local/lib/python3.6/site-packages (0.10.1)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (1.18.4)\n",
-      "Requirement already satisfied: pandas>=0.22.0 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (1.0.3)\n",
-      "Requirement already satisfied: matplotlib>=2.1.2 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (3.2.1)\n",
       "Requirement already satisfied: scipy>=1.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (1.4.1)\n",
-      "Requirement already satisfied: pytz>=2017.2 in /usr/lib/python3/dist-packages (from pandas>=0.22.0->seaborn) (2018.3)\n",
+      "Requirement already satisfied: pandas>=0.22.0 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (1.0.3)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (1.18.4)\n",
+      "Requirement already satisfied: matplotlib>=2.1.2 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (3.2.1)\n",
       "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/lib/python3/dist-packages (from pandas>=0.22.0->seaborn) (2.6.1)\n",
+      "Requirement already satisfied: pytz>=2017.2 in /usr/lib/python3/dist-packages (from pandas>=0.22.0->seaborn) (2018.3)\n",
       "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib>=2.1.2->seaborn) (2.4.7)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib>=2.1.2->seaborn) (1.2.0)\n",
       "Requirement already satisfied: cycler>=0.10 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib>=2.1.2->seaborn) (0.10.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib>=2.1.2->seaborn) (1.2.0)\n",
       "Requirement already satisfied: six in /usr/lib/python3/dist-packages (from cycler>=0.10->matplotlib>=2.1.2->seaborn) (1.11.0)\n"
      ]
     }
@@ -467,14 +467,11 @@
     "#aggregates de countries by date\n",
     "covid_data = covid_data.groupby(['Country/Region', 'Date'])[['Confirmed', 'Deaths', 'Recovered']].apply(sum)\n",
     "\n",
-    "#sorts the countries by name and then by date\n",
-    "covid_data.sort_values(by=['Country/Region', 'Date'])\n",
-    "\n",
     "#eliminates rows with no suspected, no deaths and no cured\n",
     "covid_data = covid_data[(covid_data.T != 0).any()] \n",
     "\n",
     "#get group by columns back\n",
-    "covid_data = covid_data.reset_index() \n",
+    "covid_data.reset_index(inplace=True) \n",
     "\n",
     "#substructs the mim date from the current date (and returns the result in days - dt.days)\n",
     "covid_data['Ellapsed Days'] = (covid_data['Date'] - covid_data.groupby('Country/Region')['Date'].transform('min')).dt.days"
@@ -482,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -625,7 +622,7 @@
        "9    Afghanistan 2020-03-04          1       0          0              9"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
