Add new set of data

--- a/CleanData.ipynb
+++ b/CleanData.ipynb
@@ -11,9 +11,9 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pandas in /home/filipasenra/.local/lib/python3.6/site-packages (1.0.3)\n",
-      "Requirement already satisfied: pytz>=2017.2 in /usr/lib/python3/dist-packages (from pandas) (2018.3)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in /home/filipasenra/.local/lib/python3.6/site-packages (from pandas) (1.18.4)\n",
       "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/lib/python3/dist-packages (from pandas) (2.6.1)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in /home/filipasenra/.local/lib/python3.6/site-packages (from pandas) (1.18.4)\n"
+      "Requirement already satisfied: pytz>=2017.2 in /usr/lib/python3/dist-packages (from pandas) (2018.3)\n"
      ]
     }
    ],
@@ -236,23 +236,23 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: matplotlib in /home/filipasenra/.local/lib/python3.6/site-packages (3.2.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in /usr/lib/python3/dist-packages (from matplotlib) (2.6.1)\n",
       "Requirement already satisfied: numpy>=1.11 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (1.18.4)\n",
       "Requirement already satisfied: cycler>=0.10 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (0.10.0)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (2.4.7)\n",
       "Requirement already satisfied: kiwisolver>=1.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (1.2.0)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (2.4.7)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in /usr/lib/python3/dist-packages (from matplotlib) (2.6.1)\n",
       "Requirement already satisfied: six in /usr/lib/python3/dist-packages (from cycler>=0.10->matplotlib) (1.11.0)\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: seaborn in /home/filipasenra/.local/lib/python3.6/site-packages (0.10.1)\n",
+      "Requirement already satisfied: matplotlib>=2.1.2 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (3.2.1)\n",
       "Requirement already satisfied: scipy>=1.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (1.4.1)\n",
       "Requirement already satisfied: pandas>=0.22.0 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (1.0.3)\n",
       "Requirement already satisfied: numpy>=1.13.3 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (1.18.4)\n",
-      "Requirement already satisfied: matplotlib>=2.1.2 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (3.2.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/lib/python3/dist-packages (from pandas>=0.22.0->seaborn) (2.6.1)\n",
-      "Requirement already satisfied: pytz>=2017.2 in /usr/lib/python3/dist-packages (from pandas>=0.22.0->seaborn) (2018.3)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib>=2.1.2->seaborn) (1.2.0)\n",
       "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib>=2.1.2->seaborn) (2.4.7)\n",
       "Requirement already satisfied: cycler>=0.10 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib>=2.1.2->seaborn) (0.10.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib>=2.1.2->seaborn) (1.2.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in /usr/lib/python3/dist-packages (from matplotlib>=2.1.2->seaborn) (2.6.1)\n",
+      "Requirement already satisfied: pytz>=2017.2 in /usr/lib/python3/dist-packages (from pandas>=0.22.0->seaborn) (2018.3)\n",
       "Requirement already satisfied: six in /usr/lib/python3/dist-packages (from cycler>=0.10->matplotlib>=2.1.2->seaborn) (1.11.0)\n"
      ]
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -622,7 +622,7 @@
        "9    Afghanistan 2020-03-04          1       0          0              9"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,185 +635,21 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "covid_data.to_csv('covid_data_clean.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>Country/Region</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Confirmed</th>\n",
-       "      <th>Deaths</th>\n",
-       "      <th>Recovered</th>\n",
-       "      <th>Ellapsed Days</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2020-02-24</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2020-02-25</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2020-02-26</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2020-02-27</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2020-02-28</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2020-02-29</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2020-03-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2020-03-02</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2020-03-03</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>9</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2020-03-04</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0 Country/Region        Date  Confirmed  Deaths  Recovered  \\\n",
-       "0           0    Afghanistan  2020-02-24          1       0          0   \n",
-       "1           1    Afghanistan  2020-02-25          1       0          0   \n",
-       "2           2    Afghanistan  2020-02-26          1       0          0   \n",
-       "3           3    Afghanistan  2020-02-27          1       0          0   \n",
-       "4           4    Afghanistan  2020-02-28          1       0          0   \n",
-       "5           5    Afghanistan  2020-02-29          1       0          0   \n",
-       "6           6    Afghanistan  2020-03-01          1       0          0   \n",
-       "7           7    Afghanistan  2020-03-02          1       0          0   \n",
-       "8           8    Afghanistan  2020-03-03          1       0          0   \n",
-       "9           9    Afghanistan  2020-03-04          1       0          0   \n",
-       "\n",
-       "   Ellapsed Days  \n",
-       "0              0  \n",
-       "1              1  \n",
-       "2              2  \n",
-       "3              3  \n",
-       "4              4  \n",
-       "5              5  \n",
-       "6              6  \n",
-       "7              7  \n",
-       "8              8  \n",
-       "9              9  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'countries_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-a3988e9f709c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcountries_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'countries of the world.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'countries_data' is not defined"
+     ]
     }
    ],
    "source": [
-    "covid_data_clean = pd.read_csv('covid_data_clean.csv')\n",
-    "covid_data_clean.head(10)"
+    "covid_data.to_csv('covid_data_clean.csv')"
    ]
   },
   {
@@ -821,7 +657,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "countri"
+   ]
   }
  ],
  "metadata": {
