Displaying unique values

--- a/CleanData.ipynb
+++ b/CleanData.ipynb
@@ -11,8 +11,8 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pandas in /home/filipasenra/.local/lib/python3.6/site-packages (1.0.3)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in /home/filipasenra/.local/lib/python3.6/site-packages (from pandas) (1.18.4)\n",
       "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/lib/python3/dist-packages (from pandas) (2.6.1)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in /home/filipasenra/.local/lib/python3.6/site-packages (from pandas) (1.18.4)\n",
       "Requirement already satisfied: pytz>=2017.2 in /usr/lib/python3/dist-packages (from pandas) (2018.3)\n"
      ]
     }
@@ -237,20 +237,20 @@
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: matplotlib in /home/filipasenra/.local/lib/python3.6/site-packages (3.2.1)\n",
       "Requirement already satisfied: numpy>=1.11 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (1.18.4)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (0.10.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (1.2.0)\n",
       "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (2.4.7)\n",
       "Requirement already satisfied: python-dateutil>=2.1 in /usr/lib/python3/dist-packages (from matplotlib) (2.6.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (1.2.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (0.10.0)\n",
       "Requirement already satisfied: six in /usr/lib/python3/dist-packages (from cycler>=0.10->matplotlib) (1.11.0)\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: seaborn in /home/filipasenra/.local/lib/python3.6/site-packages (0.10.1)\n",
       "Requirement already satisfied: matplotlib>=2.1.2 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (3.2.1)\n",
-      "Requirement already satisfied: scipy>=1.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (1.4.1)\n",
-      "Requirement already satisfied: pandas>=0.22.0 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (1.0.3)\n",
       "Requirement already satisfied: numpy>=1.13.3 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (1.18.4)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib>=2.1.2->seaborn) (1.2.0)\n",
+      "Requirement already satisfied: pandas>=0.22.0 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (1.0.3)\n",
+      "Requirement already satisfied: scipy>=1.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (1.4.1)\n",
       "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib>=2.1.2->seaborn) (2.4.7)\n",
       "Requirement already satisfied: cycler>=0.10 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib>=2.1.2->seaborn) (0.10.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib>=2.1.2->seaborn) (1.2.0)\n",
       "Requirement already satisfied: python-dateutil>=2.1 in /usr/lib/python3/dist-packages (from matplotlib>=2.1.2->seaborn) (2.6.1)\n",
       "Requirement already satisfied: pytz>=2017.2 in /usr/lib/python3/dist-packages (from pandas>=0.22.0->seaborn) (2018.3)\n",
       "Requirement already satisfied: six in /usr/lib/python3/dist-packages (from cycler>=0.10->matplotlib>=2.1.2->seaborn) (1.11.0)\n"
@@ -635,21 +635,60 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "covid_data.to_csv('covid_data_clean.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countries_data = pd.read_csv('countries of the world.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "covid_data_country_unique = covid_data['Country/Region'].drop_duplicates().str.strip()\n",
+    "countries_data_country = countries_data['Country'].str.strip() #removing trailing white spaces\n",
+    "df = pd.concat([covid_data_country_unique,countries_data_country]).to_frame(name='Unique Values')\n",
+    "unique_values = df.drop_duplicates(keep=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'countries_data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-a3988e9f709c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcountries_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'countries of the world.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'countries_data' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 Unique Values\n",
+      "323        Antigua and Barbuda\n",
+      "757                    Bahamas\n",
+      "1381    Bosnia and Herzegovina\n",
+      "1816                Cabo Verde\n",
+      "2133  Central African Republic\n",
+      "...                        ...\n",
+      "214              United States\n",
+      "217                    Vanuatu\n",
+      "220             Virgin Islands\n",
+      "221          Wallis and Futuna\n",
+      "222                  West Bank\n",
+      "\n",
+      "[90 rows x 1 columns]\n"
      ]
     }
    ],
    "source": [
-    "covid_data.to_csv('covid_data_clean.csv')"
+    "print(unique_values)"
    ]
   },
   {
@@ -657,9 +696,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "countri"
-   ]
+   "source": []
   }
  ],
  "metadata": {
