Cleaning code and adding a few things

--- a/CleanData.ipynb
+++ b/CleanData.ipynb
@@ -11,9 +11,9 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pandas in /home/filipasenra/.local/lib/python3.6/site-packages (1.0.3)\n",
+      "Requirement already satisfied: pytz>=2017.2 in /usr/lib/python3/dist-packages (from pandas) (2018.3)\n",
       "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/lib/python3/dist-packages (from pandas) (2.6.1)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in /home/filipasenra/.local/lib/python3.6/site-packages (from pandas) (1.18.4)\n",
-      "Requirement already satisfied: pytz>=2017.2 in /usr/lib/python3/dist-packages (from pandas) (2018.3)\n"
+      "Requirement already satisfied: numpy>=1.13.3 in /home/filipasenra/.local/lib/python3.6/site-packages (from pandas) (1.18.4)\n"
      ]
     }
    ],
@@ -236,23 +236,23 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: matplotlib in /home/filipasenra/.local/lib/python3.6/site-packages (3.2.1)\n",
-      "Requirement already satisfied: numpy>=1.11 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (1.18.4)\n",
       "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (2.4.7)\n",
       "Requirement already satisfied: python-dateutil>=2.1 in /usr/lib/python3/dist-packages (from matplotlib) (2.6.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (1.2.0)\n",
+      "Requirement already satisfied: numpy>=1.11 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (1.18.4)\n",
       "Requirement already satisfied: cycler>=0.10 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (0.10.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib) (1.2.0)\n",
       "Requirement already satisfied: six in /usr/lib/python3/dist-packages (from cycler>=0.10->matplotlib) (1.11.0)\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: seaborn in /home/filipasenra/.local/lib/python3.6/site-packages (0.10.1)\n",
-      "Requirement already satisfied: matplotlib>=2.1.2 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (3.2.1)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (1.18.4)\n",
       "Requirement already satisfied: pandas>=0.22.0 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (1.0.3)\n",
+      "Requirement already satisfied: matplotlib>=2.1.2 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (3.2.1)\n",
       "Requirement already satisfied: scipy>=1.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (1.4.1)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib>=2.1.2->seaborn) (2.4.7)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib>=2.1.2->seaborn) (0.10.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib>=2.1.2->seaborn) (1.2.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in /usr/lib/python3/dist-packages (from matplotlib>=2.1.2->seaborn) (2.6.1)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in /home/filipasenra/.local/lib/python3.6/site-packages (from seaborn) (1.18.4)\n",
       "Requirement already satisfied: pytz>=2017.2 in /usr/lib/python3/dist-packages (from pandas>=0.22.0->seaborn) (2018.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/lib/python3/dist-packages (from pandas>=0.22.0->seaborn) (2.6.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib>=2.1.2->seaborn) (0.10.0)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib>=2.1.2->seaborn) (2.4.7)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /home/filipasenra/.local/lib/python3.6/site-packages (from matplotlib>=2.1.2->seaborn) (1.2.0)\n",
       "Requirement already satisfied: six in /usr/lib/python3/dist-packages (from cycler>=0.10->matplotlib>=2.1.2->seaborn) (1.11.0)\n"
      ]
     }
@@ -655,41 +655,139 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "covid_data_country_unique = covid_data['Country/Region'].drop_duplicates().str.strip()\n",
-    "countries_data_country = countries_data['Country'].str.strip() #removing trailing white spaces\n",
-    "df = pd.concat([covid_data_country_unique,countries_data_country]).to_frame(name='Unique Values')\n",
-    "unique_values = df.drop_duplicates(keep=False)"
+    "#removing trailing white spaces\n",
+    "countries_data_country = countries_data['Country'].str.strip()\n",
+    "\n",
+    "#replacing & for and\n",
+    "countries_data_country.replace({'&': 'and'}, inplace=True, regex=True)\n",
+    "\n",
+    "#saving to file\n",
+    "countries_data_country.to_csv('countries_data_clean.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#get countries present in covid data and removing trailing white spaces\n",
+    "covid_data_country_unique = covid_data['Country/Region'].drop_duplicates().str.strip()\n",
+    "\n",
+    "#get series with all the countries present in both data sets\n",
+    "df = pd.concat([covid_data_country_unique,countries_data_country])\n",
+    "\n",
+    "#drop values that are repeated (keep the unique values)\n",
+    "unique_values = df.drop_duplicates(keep=False)\n",
+    "\n",
+    "#sort them for an easy read\n",
+    "unique_values = unique_values.sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                 Unique Values\n",
-      "323        Antigua and Barbuda\n",
-      "757                    Bahamas\n",
-      "1381    Bosnia and Herzegovina\n",
-      "1816                Cabo Verde\n",
-      "2133  Central African Republic\n",
-      "...                        ...\n",
-      "214              United States\n",
-      "217                    Vanuatu\n",
-      "220             Virgin Islands\n",
-      "221          Wallis and Futuna\n",
-      "222                  West Bank\n",
-      "\n",
-      "[90 rows x 1 columns]\n"
+      "3                  American Samoa\n",
+      "6                        Anguilla\n",
+      "10                          Aruba\n",
+      "757                       Bahamas\n",
+      "14                   Bahamas, The\n",
+      "22                        Bermuda\n",
+      "28             British Virgin Is.\n",
+      "1816                   Cabo Verde\n",
+      "37                     Cape Verde\n",
+      "38                 Cayman Islands\n",
+      "39           Central African Rep.\n",
+      "2133     Central African Republic\n",
+      "2481          Congo (Brazzaville)\n",
+      "2535             Congo (Kinshasa)\n",
+      "45               Congo, Dem. Rep.\n",
+      "46           Congo, Repub. of the\n",
+      "47                   Cook Islands\n",
+      "53                 Czech Republic\n",
+      "2904                      Czechia\n",
+      "3043             Diamond Princess\n",
+      "58                     East Timor\n",
+      "3675                     Eswatini\n",
+      "66                  Faroe Islands\n",
+      "70                  French Guiana\n",
+      "71               French Polynesia\n",
+      "4096                       Gambia\n",
+      "73                    Gambia, The\n",
+      "74                     Gaza Strip\n",
+      "78                      Gibraltar\n",
+      "80                      Greenland\n",
+      "82                     Guadeloupe\n",
+      "83                           Guam\n",
+      "85                       Guernsey\n",
+      "4757                     Holy See\n",
+      "91                      Hong Kong\n",
+      "99                    Isle of Man\n",
+      "104                        Jersey\n",
+      "108                      Kiribati\n",
+      "109                  Korea, North\n",
+      "110                  Korea, South\n",
+      "5919                       Kosovo\n",
+      "116                       Lesotho\n",
+      "6578                   MS Zaandam\n",
+      "122                         Macau\n",
+      "123                     Macedonia\n",
+      "130              Marshall Islands\n",
+      "131                    Martinique\n",
+      "134                       Mayotte\n",
+      "136          Micronesia, Fed. St.\n",
+      "7340                   Montenegro\n",
+      "140                    Montserrat\n",
+      "153            N. Mariana Islands\n",
+      "144                         Nauru\n",
+      "147          Netherlands Antilles\n",
+      "148                 New Caledonia\n",
+      "7975              North Macedonia\n",
+      "157                         Palau\n",
+      "165                   Puerto Rico\n",
+      "167                       Reunion\n",
+      "171                  Saint Helena\n",
+      "176                         Samoa\n",
+      "187               Solomon Islands\n",
+      "9919                  South Korea\n",
+      "10026                 South Sudan\n",
+      "174        St Pierre and Miquelon\n",
+      "194                     Swaziland\n",
+      "198                        Taiwan\n",
+      "10587                     Taiwan*\n",
+      "10862                 Timor-Leste\n",
+      "203                         Tonga\n",
+      "207                  Turkmenistan\n",
+      "208           Turks and Caicos Is\n",
+      "209                        Tuvalu\n",
+      "11150                          US\n",
+      "214                 United States\n",
+      "217                       Vanuatu\n",
+      "220                Virgin Islands\n",
+      "221             Wallis and Futuna\n",
+      "222                     West Bank\n",
+      "11839          West Bank and Gaza\n",
+      "dtype: object\n"
      ]
     }
    ],
    "source": [
+    "pd.set_option('display.max_rows', unique_values.shape[0]+1)\n",
     "print(unique_values)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
