--- a/CleanData.ipynb
+++ b/CleanData.ipynb
@@ -10,9 +10,9 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pandas in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (1.0.3)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from pandas) (1.18.3)\n",
       "Requirement already satisfied: pytz>=2017.2 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from pandas) (2019.3)\n",
       "Requirement already satisfied: python-dateutil>=2.6.1 in c:\\users\\claud\\miniconda3\\lib\\site-packages (from pandas) (2.8.1)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from pandas) (1.18.3)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\claud\\miniconda3\\lib\\site-packages (from python-dateutil>=2.6.1->pandas) (1.14.0)\n"
      ]
     }
@@ -235,22 +235,22 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: matplotlib in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (3.2.1)\n",
+      "Requirement already satisfied: numpy>=1.11 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from matplotlib) (1.18.3)\n",
       "Requirement already satisfied: cycler>=0.10 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from matplotlib) (0.10.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from matplotlib) (1.2.0)\n",
       "Requirement already satisfied: python-dateutil>=2.1 in c:\\users\\claud\\miniconda3\\lib\\site-packages (from matplotlib) (2.8.1)\n",
       "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from matplotlib) (2.4.7)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from matplotlib) (1.2.0)\n",
-      "Requirement already satisfied: numpy>=1.11 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from matplotlib) (1.18.3)\n",
       "Requirement already satisfied: six in c:\\users\\claud\\miniconda3\\lib\\site-packages (from cycler>=0.10->matplotlib) (1.14.0)\n",
       "Requirement already satisfied: seaborn in c:\\users\\claud\\miniconda3\\lib\\site-packages (0.10.1)\n",
       "Requirement already satisfied: pandas>=0.22.0 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from seaborn) (1.0.3)\n",
       "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from seaborn) (1.18.3)\n",
-      "Requirement already satisfied: scipy>=1.0.1 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from seaborn) (1.4.1)\n",
       "Requirement already satisfied: matplotlib>=2.1.2 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from seaborn) (3.2.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.6.1 in c:\\users\\claud\\miniconda3\\lib\\site-packages (from pandas>=0.22.0->seaborn) (2.8.1)\n",
+      "Requirement already satisfied: scipy>=1.0.1 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from seaborn) (1.4.1)\n",
       "Requirement already satisfied: pytz>=2017.2 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from pandas>=0.22.0->seaborn) (2019.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.6.1 in c:\\users\\claud\\miniconda3\\lib\\site-packages (from pandas>=0.22.0->seaborn) (2.8.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from matplotlib>=2.1.2->seaborn) (1.2.0)\n",
       "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from matplotlib>=2.1.2->seaborn) (2.4.7)\n",
       "Requirement already satisfied: cycler>=0.10 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from matplotlib>=2.1.2->seaborn) (0.10.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from matplotlib>=2.1.2->seaborn) (1.2.0)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\claud\\miniconda3\\lib\\site-packages (from python-dateutil>=2.6.1->pandas>=0.22.0->seaborn) (1.14.0)\n"
      ]
     }
@@ -472,7 +472,7 @@
     "covid_data.reset_index(inplace=True) \n",
     "\n",
     "#substructs the mim date from the current date (and returns the result in days - dt.days)\n",
-    "covid_data['Ellapsed Days'] = (covid_data['Date'] - covid_data.groupby('Country/Region')['Date'].transform('min')).dt.days"
+    "covid_data['Ellapsed Days'] = (covid_data['Date'] - covid_data.groupby('Country/Region')['Date'].transform('min')).dt.days\n"
    ]
   },
   {
@@ -625,17 +625,225 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "covid_data.head(10)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0                             Afghanistan\n",
+      "74                                Albania\n",
+      "134                               Algeria\n",
+      "207                               Andorra\n",
+      "274                                Angola\n",
+      "323                   Antigua and Barbuda\n",
+      "379                             Argentina\n",
+      "445                               Armenia\n",
+      "513                             Australia\n",
+      "616                               Austria\n",
+      "689                            Azerbaijan\n",
+      "757                               Bahamas\n",
+      "810                               Bahrain\n",
+      "884                            Bangladesh\n",
+      "945                              Barbados\n",
+      "997                               Belarus\n",
+      "1067                              Belgium\n",
+      "1161                               Belize\n",
+      "1207                                Benin\n",
+      "1260                               Bhutan\n",
+      "1323                              Bolivia\n",
+      "1381               Bosnia and Herzegovina\n",
+      "1445                             Botswana\n",
+      "1484                               Brazil\n",
+      "1556                               Brunei\n",
+      "1616                             Bulgaria\n",
+      "1677                         Burkina Faso\n",
+      "1736                                Burma\n",
+      "1778                              Burundi\n",
+      "1816                           Cabo Verde\n",
+      "1865                             Cambodia\n",
+      "1967                             Cameroon\n",
+      "2030                               Canada\n",
+      "2133             Central African Republic\n",
+      "2187                                 Chad\n",
+      "2237                                Chile\n",
+      "2303                                China\n",
+      "2410                             Colombia\n",
+      "2473                              Comoros\n",
+      "2481                  Congo (Brazzaville)\n",
+      "2535                     Congo (Kinshasa)\n",
+      "2593                           Costa Rica\n",
+      "2656                        Cote d'Ivoire\n",
+      "2714                              Croatia\n",
+      "2787                                 Cuba\n",
+      "2844                               Cyprus\n",
+      "2904                              Czechia\n",
+      "2972                              Denmark\n",
+      "3043                     Diamond Princess\n",
+      "3134                             Djibouti\n",
+      "3185                             Dominica\n",
+      "3232                   Dominican Republic\n",
+      "3300                              Ecuador\n",
+      "3368                                Egypt\n",
+      "3452                          El Salvador\n",
+      "3502                    Equatorial Guinea\n",
+      "3556                              Eritrea\n",
+      "3604                              Estonia\n",
+      "3675                             Eswatini\n",
+      "3730                             Ethiopia\n",
+      "3786                                 Fiji\n",
+      "3836                              Finland\n",
+      "3936                               France\n",
+      "4041                                Gabon\n",
+      "4096                               Gambia\n",
+      "4148                              Georgia\n",
+      "4220                              Germany\n",
+      "4322                                Ghana\n",
+      "4377                               Greece\n",
+      "4449                              Grenada\n",
+      "4496                            Guatemala\n",
+      "4551                               Guinea\n",
+      "4607                        Guinea-Bissau\n",
+      "4651                               Guyana\n",
+      "4708                                Haiti\n",
+      "4757                             Holy See\n",
+      "4820                             Honduras\n",
+      "4878                              Hungary\n",
+      "4943                              Iceland\n",
+      "5013                                India\n",
+      "5112                            Indonesia\n",
+      "5179                                 Iran\n",
+      "5258                                 Iraq\n",
+      "5332                              Ireland\n",
+      "5401                               Israel\n",
+      "5478                                Italy\n",
+      "5576                              Jamaica\n",
+      "5634                                Japan\n",
+      "5741                               Jordan\n",
+      "5807                           Kazakhstan\n",
+      "5863                                Kenya\n",
+      "5919                               Kosovo\n",
+      "5962                               Kuwait\n",
+      "6036                           Kyrgyzstan\n",
+      "6087                                 Laos\n",
+      "6132                               Latvia\n",
+      "6199                              Lebanon\n",
+      "6276                              Liberia\n",
+      "6329                                Libya\n",
+      "6374                        Liechtenstein\n",
+      "6439                            Lithuania\n",
+      "6509                           Luxembourg\n",
+      "6578                           MS Zaandam\n",
+      "6619                           Madagascar\n",
+      "6668                               Malawi\n",
+      "6704                             Malaysia\n",
+      "6808                             Maldives\n",
+      "6869                                 Mali\n",
+      "6913                                Malta\n",
+      "6975                           Mauritania\n",
+      "7030                            Mauritius\n",
+      "7081                               Mexico\n",
+      "7151                              Moldova\n",
+      "7212                               Monaco\n",
+      "7281                             Mongolia\n",
+      "7340                           Montenegro\n",
+      "7392                              Morocco\n",
+      "7459                           Mozambique\n",
+      "7506                              Namibia\n",
+      "7561                                Nepal\n",
+      "7665                          Netherlands\n",
+      "7736                          New Zealand\n",
+      "7806                            Nicaragua\n",
+      "7856                                Niger\n",
+      "7905                              Nigeria\n",
+      "7975                      North Macedonia\n",
+      "8047                               Norway\n",
+      "8119                                 Oman\n",
+      "8193                             Pakistan\n",
+      "8265                               Panama\n",
+      "8324                     Papua New Guinea\n",
+      "8373                             Paraguay\n",
+      "8434                                 Peru\n",
+      "8497                          Philippines\n",
+      "8596                               Poland\n",
+      "8661                             Portugal\n",
+      "8728                                Qatar\n",
+      "8797                              Romania\n",
+      "8869                               Russia\n",
+      "8967                               Rwanda\n",
+      "9022                Saint Kitts and Nevis\n",
+      "9066                          Saint Lucia\n",
+      "9121     Saint Vincent and the Grenadines\n",
+      "9176                           San Marino\n",
+      "9247                Sao Tome and Principe\n",
+      "9279                         Saudi Arabia\n",
+      "9346                              Senegal\n",
+      "9413                               Serbia\n",
+      "9476                           Seychelles\n",
+      "9531                         Sierra Leone\n",
+      "9569                            Singapore\n",
+      "9675                             Slovakia\n",
+      "9738                             Slovenia\n",
+      "9802                              Somalia\n",
+      "9855                         South Africa\n",
+      "9919                          South Korea\n",
+      "10026                         South Sudan\n",
+      "10059                               Spain\n",
+      "10156                           Sri Lanka\n",
+      "10258                               Sudan\n",
+      "10314                            Suriname\n",
+      "10369                              Sweden\n",
+      "10467                         Switzerland\n",
+      "10540                               Syria\n",
+      "10587                             Taiwan*\n",
+      "10694                          Tajikistan\n",
+      "10702                            Tanzania\n",
+      "10755                            Thailand\n",
+      "10862                         Timor-Leste\n",
+      "10909                                Togo\n",
+      "10972                 Trinidad and Tobago\n",
+      "11027                             Tunisia\n",
+      "11092                              Turkey\n",
+      "11150                                  US\n",
+      "11257                              Uganda\n",
+      "11305                             Ukraine\n",
+      "11371                United Arab Emirates\n",
+      "11471                      United Kingdom\n",
+      "11569                             Uruguay\n",
+      "11624                          Uzbekistan\n",
+      "11678                           Venezuela\n",
+      "11733                             Vietnam\n",
+      "11839                  West Bank and Gaza\n",
+      "11903                      Western Sahara\n",
+      "11936                               Yemen\n",
+      "11964                              Zambia\n",
+      "12015                            Zimbabwe\n",
+      "Name: Country/Region, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
-    "covid_data.to_csv('covid_data_clean.csv')"
+    "#get countries present in covid data and removing trailing white spaces\n",
+    "covid_data_country_unique = covid_data['Country/Region'].drop_duplicates().str.strip()\n",
+    "pd.set_option('display.max_rows', covid_data_country_unique.shape[0]+1)\n",
+    "print(covid_data_country_unique)\n",
+    "\n",
+    "# Get names of indexes for which column Country/Region is not a country\n",
+    "index1 = covid_data[covid_data['Country/Region'] == 'Diamond Princess' ].index\n",
+    "index2 = covid_data[covid_data['Country/Region'] == 'MS Zaandam' ].index\n",
+    "index3 = covid_data[covid_data['Country/Region'] == 'Holy See' ].index\n",
+    " \n",
+    "# Delete these rows indexes from dataFrame\n",
+    "covid_data.drop(index1 , inplace=True)\n",
+    "covid_data.drop(index2 , inplace=True)\n",
+    "covid_data.drop(index3 , inplace=True)"
    ]
   },
   {
@@ -644,7 +852,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries_data = pd.read_csv('countries of the world.csv')"
+    "covid_data.to_csv('covid_data_clean.csv')"
    ]
   },
   {
@@ -653,6 +861,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "countries_data = pd.read_csv('countries of the world.csv')\n",
+    "\n",
     "#removing trailing white spaces\n",
     "countries_data_country = countries_data['Country'].str.strip()\n",
     "\n",
@@ -710,7 +920,6 @@
       "28           British Virgin Is.\n",
       "38               Cayman Islands\n",
       "47                 Cook Islands\n",
-      "3043           Diamond Princess\n",
       "66                Faroe Islands\n",
       "70                French Guiana\n",
       "71             French Polynesia\n",
@@ -720,7 +929,6 @@
       "82                   Guadeloupe\n",
       "83                         Guam\n",
       "85                     Guernsey\n",
-      "4757                   Holy See\n",
       "91                    Hong Kong\n",
       "99                  Isle of Man\n",
       "104                      Jersey\n",
@@ -728,7 +936,6 @@
       "109                Korea, North\n",
       "5919                     Kosovo\n",
       "116                     Lesotho\n",
-      "6578                 MS Zaandam\n",
       "122                       Macau\n",
       "130            Marshall Islands\n",
       "131                  Martinique\n",
@@ -779,13 +986,6 @@
     "#saving it to a file\n",
     "new_df.to_csv('countries_data_clean.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
